fixed spacing with p text

--- a/src/styles/blobButton.scss
+++ b/src/styles/blobButton.scss
@@ -20,13 +20,11 @@
       font-size: calc(16px + (18 - 16) * ((100vw - 380px) / (768 - 351)));
     }
     @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-      margin-top: 60px;
       padding: 20px;
       width: calc(400px + (600 - 400) * ((100vw - 768px) / (1440 - 768)));
       font-size: calc(18px + (34 - 18) * ((100vw - 768px) / (1440 - 768)));
     }
     @media screen and (min-width: $break--dsktp--lg){
-      margin-top: 100px;
       padding: 40px;
       width: calc(600px + (800 - 600) * ((100vw - 1440px) / (2000 - 1440)));
       font-size: calc(34px + (42 - 34) * ((100vw - 1440px) / (2000 - 1440)));
